se corrigen errores varios